# INMOST-FEM

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake.in
anifem++/: CMakeLists.txt
anifem++/autodiff/: CMakeLists.txt  autodiff.cpp  autodiff.h  autodiff.inl  cauchy_strain_autodiff.h  cauchy_strain_invariants.h  cauchy_strain_invariants.inl  physical_tensors.h  physical_tensors.inl  physical_tensors_3d.inl
anifem++/fem/: CMakeLists.txt  complement_fem_space.cpp  complement_fem_space.h  diff_tensor.h  equivariant_complement_builder.cpp  equivariant_complement_builder.h  expr_interface.h  expr_interface.inl  fem_memory.h  fem_memory_parallel.h  fem_space.cpp  fem_space.h  fem_space.inl  geometry.h  mutex_type.h  numeric_expr.h  numeric_expr.inl  operators.h  operators.inl  quadrature_formulas.cpp  quadrature_formulas.h  tetdofmap.cpp  tetdofmap.h  tetdofmap.inl
anifem++/fem/operations/: CMakeLists.txt  core.h  core.inl  dc_on_dof.h  dc_on_dof.inl  dyn_ops.h  dyn_ops.inl  eval.h  eval.inl  int_edge.h  int_edge.inl  int_face.h  int_face.inl  int_pnt.h  int_pnt.inl  int_tet.h  int_tet.inl  interpolate.h  interpolate.inl  operations.h
anifem++/fem/spaces/: CMakeLists.txt  bubble_2.h  bubble_4.h  common.h  crouzeix_raviart_1.h  nedelec_0.h  poly_0.h  poly_1.h  poly_2.h  poly_3.h  raviant_thomas_0.h  spaces.h
anifem++/inmost_interface/: CMakeLists.txt  assembler.cpp  assembler.h  assembler.inl  elemental_assembler.cpp  elemental_assembler.h  elemental_assembler.inl  ext_array_enum.inl  fem.cpp  fem.h  for_assembler.cpp  for_assembler.h  for_assembler.inl  func_wrap.h  func_wrap.inl  global_enumerator.cpp  global_enumerator.h  interval_enum.inl  ordering.h  ordering.inl  timer_wrap.h
anifem++/interval/: CMakeLists.txt  ext_array_enum.h  interval.cpp  interval_enum.h  interval_map.h  interval_map.inl
anifem++/kinsol_interface/: CMakeLists.txt  SUNNonlinearSolver.cpp  SUNNonlinearSolver.h
anifem++/utils/: CMakeLists.txt  adapt_mesh.cpp  adapt_mesh.h  mesh_utils.cpp  mesh_utils.h  utils.cpp  utils.h  utils.inl
cmake/: Downloadcasadi.cmake  Downloadeigen3.cmake  Downloadinmost.cmake  Downloadsundials.cmake
data/mesh/: beam.geo  beam.msh  cilinder.vtu  thick_cylinder.geo  thick_cylinder.msh
docs/eng/: user_guide.md
docs/rus/: user_guide.md
examples/: CMakeLists.txt
examples/Diffusion/: CMakeLists.txt  diffusion.cpp  dyn_diffusion.cpp
examples/Fem/: CMakeLists.txt
examples/Fem/Ani/: BendBeam.cpp  StokesNavier.cpp  diffusion.cpp  dyn_diffusion.cpp  example_common.cpp  example_common.h
examples/common/: CMakeLists.txt  example_common.cpp  example_common.h
examples/common/primitives/: CMakeLists.txt  mesh_gen.cpp  mesh_gen.h
examples/tutorials/: CMakeLists.txt  cmd_ex1_3.cpp  cmd_ex1_3.h  cmd_ex4.cpp  cmd_ex4.h  elastoplastic.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  lin_elast.cpp  nonlin_elast.cpp  nonlin_elast_incompress.cpp  prob_args.cpp  prob_args.h  quadrature_function.cpp  react_diff1.cpp  react_diff2.cpp  stokes.cpp  unsteady_conv_dif.cpp  utils_laplace.cpp
tests/: CMakeLists.txt
tests/autodiff/: CMakeLists.txt  autodiff_test.cpp
tests/fem/: CMakeLists.txt  fem_memory_test.cpp  femspace_test.cpp  geometry_test.cpp  quadrature_formulas_test.cpp  tetdofmap_test.cpp
tests/fem/operations/: CMakeLists.txt  dc_on_dof_test.cpp  eval_test.cpp  int_edge_test.cpp  int_face_test.cpp  int_pnt_test.cpp  int_tet_test.cpp
tests/fem/spaces/: CMakeLists.txt  predefined_spaces_test.cpp
tests/inmost_interface/: CMakeLists.txt  ext_array_enum_test.cpp
tests/interval/: CMakeLists.txt  ext_array_enum_test.cpp  interval_map_test.cpp
tests/kinsol_interface/: CMakeLists.txt  SUNNonlinearSolver_test.cpp
